8192889: [Nestmates] ciField constructor needs to clear nestmate related exceptions

Reviewed-by: thartmann